@@ -45,6 +45,9 @@ Show summary of options.
 .TP
 .B \-v, \-\-verbose
 Enable verbose (debug) logging.
+.TP
+.B \-c, \-\-configure
+Show the configuration window on startup, even if this is not the first run.
 .SH AUTHOR
 AutoKey was written by Chris Dekter, loosely based on a script by Sam Peterson.
 .PP
